syntax = "proto3";
package proto;

enum MessageType {
  RESERVE = 0;
  TEXT = 1;
  FILE = 2;
  IMAGE = 3;
  AUDIO = 4;
  VIDEO = 5;
  AUDIO_ONLINE = 6;
  VIDEO_ONLINE = 7;
}

enum MessageUserType {
  RESERVED = 0;
  USER = 1;
  GROUP = 2;
}

message Message {
  //头像
  string avatar = 1;
  // 发送消息用户的用户名
  string fromUsername = 2;
  // 发送消息用户uuid
  string from = 3;
  // 发送给对端用户的uuid
  string to = 4;
  // 文本消息内容
  string content = 5;
  // 消息内容类型：1.文字 2.普通文件 3.图片 4.音频 5.视频 6.语音聊天 7.视频聊天
  int32 contentType = 6;
  // 消息传输类型：如果是心跳消息，该内容为heatbeat,在线视频或者音频为webrtc
  string type = 7;
  // 消息类型，1.单聊 2.群聊
  int32 messageType = 8;
  // 图片，视频，语音的路径
  string url = 9;
  // 文件后缀，如果通过二进制头不能解析文件后缀，使用该后缀
  string fileSuffix = 10;
  // 如果是图片，文件，视频等的二进制
  bytes file = 11;
}